# rdkb-PowerManager

./: CONTRIBUTING.md  configure.ac
scripts/: rdkb_power_manager.sh
source/: Makefile.am  pwrMgr.c
source/include/: pwrMgr.h
source/test/: Makefile.am  gtest_main.cpp
systemd_units/: rdkbPowerManager.service
